# sessions

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  config.h.in  licence.txt  notes.md
cmake/: install.cmake  redConfig.cmake
include/: ranges.hpp  session.hpp  session_impl.hpp  sys_layer.hpp
include/ixm/: session.hpp  session_envcache.hpp  session_impl.hpp
include/red/: config.h.in  ranges.hpp  session.hpp  session_envcache.hpp  session_impl.hpp  sys_layer.hpp
include/red/sessions/: ranges.hpp  session.hpp  sys_layer.hpp
src/: impl.hpp  posix.cxx  session.cpp  sys.hpp  win32.hpp  windows.cxx
test/: lab.cpp  slimwindows.h  test.cpp  util.cpp  util.hpp
